Update video service
