# controllers/user.go
@@ -12,7 +12,7 @@ import (
 	uuid "github.com/satori/go.uuid"
 )
 
-// UserController is for user CURD
+// UserController is for user CRUD
 type UserController struct {
 	Context     iris.Context
 	UserService services.UserInterface
@@ -43,11 +43,11 @@ func (c *UserController) BeforeActivation(app mvc.BeforeActivation) {
 // @Param page 		query int 	 false	"select from page"
 // @Param limit 	query int 	 false	"limit number"
 // @Param order 	query string false	"order by field"
-// @Param orderBy 	query string false	"order by asc or desc" 	Enums(asc, desc)
-// @Param userType 	query string false	"filter type of user"	Enums(super, admin, user, learner)
+// @Param orderBy 	query string false	"order by asc or desc" 	enums(asc, desc)
+// @Param userType 	query string false	"filter type of user"	enums(super, admin, user, learner)
 // @Param name 		query string false 	"search name of user"
 // @Param username 	query string false 	"search username of user"
-// @Param state 	query string false 	"filter state of user" 	Enums(active, inactive)
+// @Param state 	query string false 	"filter state of user" 	enums(active, inactive)
 // @Success 200 {object} controllers.GetUsersListResponse
 // @Failure 400 {object} controllers.ErrorResponse
 // @Failure 401 {object} controllers.ErrorResponse
@@ -87,11 +87,8 @@ func (c *UserController) GetUsersList() {
 
 // GetUsersListResponse Response for GetUsersList
 type GetUsersListResponse struct {
-	message string `example:"success"`
-	data    []models.User
-	page    int `example:"1"`
-	limit   int `example:"10"`
-	total   int `example:"100"`
+	GetListResponse
+	Data []models.User `json:"data"`
 }
 
 // CreateUser POST /users
