# models/lexical_video.go
@@ -8,13 +8,11 @@ import (
 // LexicalVideo mdoel for Lexical Database
 type LexicalVideo struct {
 	Base
-	Lexicon       Lexicon        `gorm:"FOREIGNKEY:LexiconID" json:"lexicon"`
-	LexiconID     uuid.UUID      `gorm:"TYPE:uuid;NOT NULL;INDEX:lexicon_id" json:"lexiconID"`
-	Performer     Performer      `gorm:"FOREIGNKEY:PerformerID" json:"performer"`
-	PerformerID   uuid.UUID      `gorm:"TYPE:uuid;NOT NULL;INDEX:performer_id" json:"performerID"`
-	WordFormation string         `gorm:"DEFAULT:NULL;INDEX:word_formation" json:"wordFormation"`
-	Morpheme      pq.StringArray `gorm:"TYPE:text[];DEFAULT:array[]::text[];INDEX:morpheme" json:"morpheme"`
-	LeftSignsID   pq.StringArray `gorm:"TYPE:uuid[];DEFAULT:array[]::uuid[];INDEX:left_signs_id" json:"leftSignsID"`
-	RightSignsID  pq.StringArray `gorm:"TYPE:uuid[];DEFAULT:array[]::uuid[];INDEX:right_signs_id" json:"rightSignsID"`
-	VideoPath     string         `gorm:"DEFAULT:NULL" json:"videoPath"`
+	WordFormation string         `gorm:"DEFAULT:NULL;INDEX:word_formation" json:"wordFormation" example:"simple"`                                                         // 构词方式
+	VideoPath     string         `gorm:"DEFAULT:NULL" json:"videoPath" example:"lexical_videos/550e8400-e29b-41d4-a716-446655440000.mp4"`                                 // 视频路径
+	LexiconID     uuid.UUID      `gorm:"TYPE:uuid;NOT NULL;INDEX:lexicon_id" json:"lexiconID" example:"550e8400-e29b-41d4-a716-446655440000"`                             // 词汇ID
+	PerformerID   uuid.UUID      `gorm:"TYPE:uuid;NOT NULL;INDEX:performer_id" json:"performerID" example:"550e8400-e29b-41d4-a716-446655440000"`                         // 被试ID
+	Morpheme      pq.StringArray `gorm:"TYPE:text[];DEFAULT:array[]::text[];INDEX:morpheme" json:"morpheme" example:"['hello','world']"`                                  // 构词语素
+	LeftSignsID   pq.StringArray `gorm:"TYPE:uuid[];DEFAULT:array[]::uuid[];INDEX:left_signs_id" json:"leftSignsID" example:"['550e8400-e29b-41d4-a716-446655440000']"`   // 左手手形ID
+	RightSignsID  pq.StringArray `gorm:"TYPE:uuid[];DEFAULT:array[]::uuid[];INDEX:right_signs_id" json:"rightSignsID" example:"['550e8400-e29b-41d4-a716-446655440000']"` // 右手手形ID
 }
